--- a/spring-boot-docs/src/main/asciidoc/appendix-application-properties.adoc
+++ b/spring-boot-docs/src/main/asciidoc/appendix-application-properties.adoc
@@ -242,6 +242,16 @@ content into your application; rather pick only the properties that you need.
 	spring.activemq.in-memory=true # broker kind to create if no broker-url is specified
 	spring.activemq.pooled=false
 
+    # HornetQ ({sc-spring-boot-autoconfigure}/jms/HornetQProperties.{sc-ext}[HornetQProperties])
+	spring.hornetq.mode=netty # connection mode (netty, embedded)
+	spring.hornetq.host=localhost # hornetQ host (netty mode)
+	spring.hornetq.port=5445 # hornetQ port (netty mode)
+	spring.hornetq.embedded.persistent=false # message persistence
+	spring.hornetq.embedded.data-directory= # location of data content (when persistence is enabled)
+	spring.hornetq.embedded.queues= # comma separate queues to create on startup
+	spring.hornetq.embedded.topics= # comma separate topics to create on startup
+
+
 	# JMS ({sc-spring-boot-autoconfigure}/jms/JmsTemplateProperties.{sc-ext}[JmsTemplateProperties])
 	spring.jms.pub-sub-domain= # false for queue (default), true for topic
 
