--- a/spring-boot-docs/src/main/asciidoc/appendix-application-properties.adoc
+++ b/spring-boot-docs/src/main/asciidoc/appendix-application-properties.adoc
@@ -161,6 +161,7 @@ content into your application; rather pick only the properties that you need.
 	spring.datasource.platform= # the platform to use in the schema resource (schema-${platform}.sql)
 	spring.datasource.continueOnError=false # continue even if can't be initialized
 	spring.datasource.separator=; # statement separator in SQL initialization scripts
+	spring.datasource.jndi= #JNDI name of the data source (takes precedence over JDBC settings)
 	spring.datasource.driverClassName= # JDBC Settings...
 	spring.datasource.url=
 	spring.datasource.username=
