--- a/spring-boot-docs/src/main/asciidoc/appendix-application-properties.adoc
+++ b/spring-boot-docs/src/main/asciidoc/appendix-application-properties.adoc
@@ -704,6 +704,7 @@ content into your application; rather pick only the properties that you need.
 	management.health.elasticsearch.enabled=true
 	management.health.elasticsearch.indices=  # comma-separated index names
 	management.health.elasticsearch.response-timeout=100 # the time, in milliseconds, to wait for a response from the cluster
+	management.health.defaultt.enabled=true # enable default health indicators
 	management.health.diskspace.enabled=true
 	management.health.diskspace.path=.
 	management.health.diskspace.threshold=10485760
