--- a/spring-boot-docs/src/main/asciidoc/appendix-application-properties.adoc
+++ b/spring-boot-docs/src/main/asciidoc/appendix-application-properties.adoc
@@ -356,8 +356,13 @@ content into your application; rather pick only the properties that you need.
 	spring.resources.chain.strategy.fixed.version= # Version string to use for the Version Strategy.
 	spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/ # Locations of static resources.
 
-    # SPRING SESSION ({sc-spring-boot-autoconfigure}/session/SocialWebAutoConfiguration.{sc-ext}[SessionAutoConfiguration])
-    spring.session.store.store-type= # Session store type
+	# SPRING SESSION ({sc-spring-boot-autoconfigure}/session/SessionProperties.{sc-ext}[SessionProperties])
+	spring.session.hazelcast.map-name=spring:session:sessions # Name of the map used to store sessions.
+	spring.session.jdbc.table-name=SPRING_SESSION # Name of database table used to store sessions.
+	spring.session.mongo.collection-name=sessions # Collection name used to store sessions.
+	spring.session.redis.flush-mode= # Flush mode for the Redis sessions.
+	spring.session.redis.namespace= # Namespace for keys used to store sessions.
+	spring.session.store-type= # Session store type, auto-detected according to the environment by default.
 
 	# SPRING SOCIAL ({sc-spring-boot-autoconfigure}/social/SocialWebAutoConfiguration.{sc-ext}[SocialWebAutoConfiguration])
 	spring.social.auto-connection-views=false # Enable the connection status view for supported providers.
